refactor: Order가 OrderTable을 간접 참조하도록 변경, OrderValidator 추가